--- a/translations/pt-BR/loc/elements/_aspects.json
+++ b/translations/pt-BR/loc/elements/_aspects.json
@@ -93,14 +93,14 @@
         {
             "id": "edge",
             "label": "Fio",
-            "description": "Toda conquista ocorre no Limiar. Alguns que habitam ali são cegos e não podem ser feridos. Outros são fortes e se tornam cada vez mais fortes. [O Limiar é o princípio da batalha e da guerra.]",
+            "description": "Toda conquista ocorre no Limiar. Aquele que habita ali é cego e não pode ser ferido. Outro é forte e se torna cada vez mais forte. [O Limiar é o princípio da batalha e da guerra.]",
             "isAspect": true,
             "noartneeded": true
         },
         {
             "id": "forge",
             "label": "Forja",
-            "description": "\"Fogo\", eu li uma vez, \"é o inverno que aquece e a primavera que consome.\" [O princípio da Forja transforma e destrói.]",
+            "description": "'Fogo', eu li uma vez, 'é o inverno que aquece e a primavera que consome.' [O princípio da Forja transforma e destrói.]",
             "isAspect": true
         },
         {
