--- a/translations/pt-BR/loc/recipes/legacy_physician_recipes.json
+++ b/translations/pt-BR/loc/recipes/legacy_physician_recipes.json
@@ -121,7 +121,7 @@
             "actionid": "hookplot",
             "label": "Olho do Observador",
             "requirements": {
-                "reason": 1
+                "concentration": 1
             },
             "startdescription": "O observador é a porta do Olho. Para desbloquear meu olho, deve haver um sacrifício pequeno.",
             "description": "Eu empunhei a faca dormindo. Está com dor, mas até mesmo a dor é um sinal. Eu fiquei a ferida. Eu direi a eles que foi um acidente. No sonho, vi a porta. Algum dia em breve, eu passarei isso.",
