--- a/translations/pt-BR/loc/recipes/study_8_tutoring.json
+++ b/translations/pt-BR/loc/recipes/study_8_tutoring.json
@@ -127,7 +127,7 @@
                 "compensationvalue": -2
             },
             "startdescription": "Isso será suficiente. Ouvirei cuidadosamente.",
-            "description": "A linguagem da Visão de Arme, do Livro de Daniel e da Contabilidade de Kanishk na porta das Aranhas."
+            "description": "A linguagem da Visão de Amram, do Livro de Daniel e da Contabilidade de Kanishk na porta das Aranhas."
         },
         {
             "id": "studysanskrittutoring",
