--- a/translations/pt-BR/loc/recipes/talking_8_follower.json
+++ b/translations/pt-BR/loc/recipes/talking_8_follower.json
@@ -486,7 +486,7 @@
             },
             "startdescription": "Se a fé de meu devoto está vacilando, posso usar Fervour para atear seu entusiasmo novamente.",
             "description": "Esqueceis os sonhos com tanta rapidez?",
-            "effects": {
+            "aspects": {
                 "refiring": 1
             },
             "craftable": true,
