--- a/translations/pt-BR/loc/elements/credits.json
+++ b/translations/pt-BR/loc/elements/credits.json
@@ -64,7 +64,7 @@
             "id": "credits.loc.zh-hans.",
             "label": "Localização Chinesa",
             "icon": "curio.lantern",
-            "description": "\nProject Gutenberg | indienova, Bamboo0o0, Dandirion, Erudito93, Ericcil, Fish Wu, Girafe, Lotus, Menschmaschine, Nitrome, <font=NotoSansCJKsc-Regular>N某</font>, Oval_plus, craft, laolaoruqin, railhead, wizardo, <font=NotoSansCJKsc-Regular>阿橘倒地不起, 百影虱子, 可里, 懒猫咪, 骡子·mule, 墨染胧月夜, 沙拉, 一只小雨</font>. EXILE: <font=NotoSansCJKsc-Regular>黑叶残荷, 白前Cynanchum, 黑叶残荷, 狂犬, Dominic Fowler, IvyLili, Corey SK, Cora Reynolds, 京极明, Tomatiel西红柿精, 清客, 安定斯基</font>"
+            "description": "\nProject Gutenberg | indienova, Bamboo0o0, Dandirion, Erudito93, Ericcil, Fish Wu, Girafe, Lotus, Menschmaschine, Nitrome, <font=NotoSansCJKsc-Regular>N某</font>, Oval_plus, craft, laolaoruqin, railhead, wizardo, <font=NotoSansCJKsc-Regular>阿橘倒地不起, 百影虱子, 可里, 懒猫咪, 骡子·mule, 墨染胧月夜, 沙拉, 一只小雨</font>. EXILE: <font=NotoSansCJKsc-Regular>黑叶残荷 and 白前Cynanchum</font>"
         },
         {
             "id": "credits.loc.ru",
@@ -75,20 +75,20 @@
         {
             "id": "credits.loc.jp",
             "label": "Localização Japonesa",
-            "description": "LocalizeDirect \n\nVERSION NOTES VOLUNTEER TRANSLATION: Nirvana Studio",
+            "description": "LocalizeDirect (Ramune)\n\nClocq\n\nVERSION NOTES VOLUNTEER TRANSLATION: Nirvana Studio",
             "icon": "jploc"
         },
         {
             "id": "credits.loc.de",
             "label": "Localização Alemã",
-            "description": "Localize Direct \n\nVERSION NOTES VOLUNTEER TRANSLATION: Jan Zimmer",
+            "description": "Localize Direct (Rolf Klischewski) \n\nVERSION NOTES VOLUNTEER TRANSLATION: Jan Zimmer",
             "icon": "bookofthrones"
         },
         {
             "id": "credits.special",
             "label": "Agradecimentos Especiais",
             "icon": "temptation.remembrance",
-            "description": "Sonja & PK; Matt Hosty; Haley Uyrus, Norman Chalk, Jasper R, Thomas Wade, Michael Guan, Darren Liao, Eve Kimbrough, Joel Bridge, drgatos,  Erin Dalton, So La, Sean Shannon, Jakob Hajdus, Zachary Dearing, Indijohnson, Haoran Sun, Tobia Ronco, Olaf Stachowski, Aiuigi Sarig, Kamil Kozlowski, aljawn, Isyander, nsk, Marcel Möhring, Yufei Qiu, and literally everyone who has ever sent feedback or a bug report. Thank you."
+            "description": "Sonja & PK; Matt Hosty; Haley Uyrus, Norman Chalk, Jasper R, Thomas Wade, Michael Guan, Darren Liao, Eve Kimbrough, Joel Bridge, drgatos,  Erin Dalton, So La, Sean Shannon, Jakob Hajdus, Zachary Dearing, Indijohnson, Haoran Sun, Tobia Ronco, Olaf Stachowski, Aiuigi Sarig, Kamil Kozlowski, aljawn, Isyander, nsk, Marcel Möhring, Clock, Chelnoque, and literally everyone who has ever sent feedback or a bug report. Thank you."
         }
     ]
 }
