--- a/translations/pt-BR/loc/elements/othernpcs.json
+++ b/translations/pt-BR/loc/elements/othernpcs.json
@@ -10,8 +10,7 @@
                 "grail": 3,
                 "heart": 3
             },
-            "description": "Uma experiência esmagadora roubou a sensatez deste indivíduo, que em breve desaparecerá, para que nunca mais volte a ser visto.",
-            "lifetime": 60,
+            "description": "Alguma experiência esmagadora roubou deste indivíduo os seus sentidos.",
             "xtriggers": {
                 "killmortal": "corpse"
             }
@@ -27,8 +26,6 @@
                 "heart": 3
             },
             "description": "Alguém caiu em suas garras. Elas não sobreviverão para sempre.",
-            "lifetime": 600,
-            "decayTo": "corpse",
             "xtriggers": {
                 "killmortal": "corpse",
                 "derangemortal": "lunatic"
@@ -45,8 +42,6 @@
                 "heart": 3
             },
             "description": "Alguém caiu em suas garras. Elas não sobreviverão para sempre.",
-            "lifetime": 600,
-            "decayTo": "corpse",
             "xtriggers": {
                 "killmortal": "corpse",
                 "derangemortal": "lunatic"
