--- a/translations/pt-BR/loc/elements/remnants.json
+++ b/translations/pt-BR/loc/elements/remnants.json
@@ -16,7 +16,26 @@
                 "raiseshattered": "spirit_wintera_edge"
             },
             "lifetime": 60,
-            "decayTo": "notoriety"
+            "decayTo": "notoriety",
+            "burnTo": "corpse.calcin",
+            "comments": "The xtriggers for raising are no longer relevant if we have corpse.calcin, but keeping them in for unexpected execution paths."
+        },
+        {
+            "id": "corpse.calcin",
+            "label": "A Human Corpse",
+            "description": "The spirit is departed.",
+            "aspects": {
+                "winter": 3,
+                "grail": 3,
+                "ingredient": 1,
+                "remnant": 1
+            },
+            "xtriggers": {
+                "raiseburgeoning": "spirit_wintera_moth",
+                "raiseshattered": "spirit_wintera_edge"
+            },
+            "lifetime": 1,
+            "icon": "corpse"
         },
         {
             "id": "corpse.furious",
@@ -27,22 +46,22 @@
             "xtriggers": {
                 "alzabo": "memory.furious"
             },
-            "description": "Dentro deste fragmento há lembranças de uma Hança mais velha."
+            "description": "Dentro deste fragmento há lembranças de uma Hora mais velha."
         },
         {
             "id": "corpse.luxurious",
-            "label": "Caio Restante",
+            "label": "Leathery Remnant",
             "aspects": {
                 "remnant": 1
             },
             "xtriggers": {
                 "alzabo": "memory.luxurious"
             },
-            "description": "Memórias sensatas e anseios, segredos do Knot, numa sucata antiquada e pouco promissora."
+            "description": "Memórias sensatas e anseios, segredos do Nó, numa sucata antiquada e pouco promissora."
         },
         {
             "id": "corpse.liminal",
-            "label": "Bandeira-Longo",
+            "label": "Long-Flake",
             "aspects": {
                 "remnant": 1
             },
@@ -53,14 +72,14 @@
         },
         {
             "id": "corpse.horizon",
-            "label": "Segmento Deslumbrante",
+            "label": "Shadowless Segment",
             "aspects": {
                 "remnant": 1
             },
             "xtriggers": {
                 "alzabo": "memory.horizon"
             },
-            "description": "Os Reis já conheceram a verdade Glória?"
+            "description": "Os Reis já conheceram a verdadeira Glória?"
         },
         {
             "id": "corpse.splendid",
@@ -71,7 +90,7 @@
             "xtriggers": {
                 "alzabo": "memory.splendid"
             },
-            "description": "Ela conhecia o Sol como era?"
+            "description": "Ela conhecia o Sol como ele era?"
         }
     ]
 }
