--- a/translations/pt-BR/loc/legacies/DLC_GHOUL_ghoul_legacy.json
+++ b/translations/pt-BR/loc/legacies/DLC_GHOUL_ghoul_legacy.json
@@ -3,8 +3,8 @@
         {
             "id": "ghoul",
             "label": "O Médium?",
-            "description": "Everyone knows that I speak with the dead. I have been called a prophet, and a ghoul. I have no reason to disabuse them of their illusions.",
-            "startdescription": "Tonight the theatre is crammed and breathless. I have let them wait long enough.",
+            "description": "Todos sabem que falo com os mortos. Fui chamado de profeta, e de carniçal. Não tenho motivos para desiludi-los de suas fantasias.",
+            "startdescription": "Esta noite o teatro está cheio e sem fôlego. Eu ja os deixei esperar o bastante.",
             "effects": {
                 "ghouljob.first": 1,
                 "memory.shameful": 1,
