--- a/translations/pt-BR/loc/recipes/DLC_EXILE_exile_scout.json
+++ b/translations/pt-BR/loc/recipes/DLC_EXILE_exile_scout.json
@@ -451,7 +451,7 @@
         {
             "id": "scout.kiev",
             "actionid": "scout",
-            "label": "Reconnoitre Kiev",
+            "label": "Reconnoitre Kyiv",
             "startdescription": "Walk the city, seeking opportunities. [Sometimes, this will create a Trace.]",
             "warmup": 30,
             "aspects": {
