--- a/translations/pt-BR/loc/recipes/DLC_EXILE_exile_use.json
+++ b/translations/pt-BR/loc/recipes/DLC_EXILE_exile_use.json
@@ -738,7 +738,7 @@
             "actionid": "use",
             "label": "A Negotiation",
             "startdescription": "I don't have time to do this the right way. Lucky, then, that I have the connections to do it the fast way.",
-            "description": "@#licence.medical|'And good morning to <i>you</i>, Doctor.'\n#licence.import|'We don't need to worry about these details. Not among friends.'\n#And done.|@",
+            "description": "@#licence.medical|'And good morning to <i>you</i>, Doctor.'\n#licence.import|'We don't need to worry about these details. Not among friends.'\n#|And done.@",
             "comments": "The slots on the purchaseable item are what restrict to a relevant connection.",
             "requirements": {
                 "op": 1,
@@ -979,8 +979,7 @@
                     "description": "'When all candles be out, all cats be grey.'",
                     "required": {
                         "lantern": 1
-                    },
-                    "consumes": true
+                    }
                 }
             ],
             "alt": [
@@ -1113,7 +1112,7 @@
             "id": "use.find.nameless",
             "actionid": "use",
             "label": "Follow",
-            "startdescription": "The Velvet, who conceals secrets, has a Nameless Name. In that Name's mists, the defeated find solace. That Name is never seen; except, now and then, by the very greyest of cats. [This will consume both the Opportunity and the light.]",
+            "startdescription": "The Velvet, who conceals secrets, has a Nameless Name. In that Name's mists, the defeated find solace. That Name is never seen; except, now and then, by the very greyest of cats. [This will consume the Opportunity.]",
             "description": "I follow the swaying tail of a grey cat through the streets after sunset.",
             "requirements": {
                 "lantern": 1
