--- a/translations/pt-BR/loc/verbs/main_verbs.json
+++ b/translations/pt-BR/loc/verbs/main_verbs.json
@@ -105,6 +105,17 @@
                 "id": "time",
                 "label": "Tempo"
             }
+        },
+        {
+            "id": "portal.mansus",
+            "label": "Mansus Portal",
+            "description": "A Mansus transition",
+            "icon": "map"
+        },
+        {
+            "id": "pickup",
+            "label": "Pickup",
+            "description": "offers cards via output slots"
         }
     ]
 }
